unpackaged/main/default/objects/SBQQ__QuoteLine__c/fields/M3_Work_Order__c.field-meta.xml
<CustomField>
    <fullName>M3_Work_Order__c</fullName>
    <label>M3 Work Order #</label>
    <type>TextArea</type>
</CustomField>