unpackaged/main/default/objects/SBQQ__QuoteLine__c/fields/Markup_Approval__c.field-meta.xml
<CustomField>
    <fullName>Markup_Approval__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Markup Approval</label>
    <type>Checkbox</type>
</CustomField>