unpackaged/main/default/objects/SBQQ__QuoteLine__c/fields/MCO_Received__c.field-meta.xml
<CustomField>
    <fullName>MCO_Received__c</fullName>
    <label>MCO Received</label>
    <type>Date</type>
</CustomField>