unpackaged/main/default/objects/SBQQ__QuoteLine__c/fields/MCO_Title_Transfer__c.field-meta.xml
<CustomField>
    <fullName>MCO_Title_Transfer__c</fullName>
    <label>MCO/Title Transfer</label>
    <type>Date</type>
</CustomField>