unpackaged/main/default/objects/SBQQ__QuoteLine__c/fields/Mileage2__c.field-meta.xml
<CustomField>
    <fullName>Mileage2__c</fullName>
    <label>Mileage</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>