unpackaged/main/default/objects/SBQQ__QuoteLine__c/fields/Mileage__c.field-meta.xml
<CustomField>
    <fullName>Mileage__c</fullName>
    <label>Mileage_Old</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>