unpackaged/main/default/objects/SBQQ__QuoteLine__c/fields/Monthly_Rental_Rate__c.field-meta.xml
<CustomField>
    <fullName>Monthly_Rental_Rate__c</fullName>
    <label>Monthly Rental Rate</label>
    <precision>8</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>