unpackaged/main/default/objects/SBQQ__QuoteLine__c/fields/Months_on_Rent__c.field-meta.xml
<CustomField>
    <fullName>Months_on_Rent__c</fullName>
    <label>Months on Rent</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>