unpackaged/main/default/objects/SBQQ__QuoteLine__c/fields/MSO_Notes__c.field-meta.xml
<CustomField>
    <fullName>MSO_Notes__c</fullName>
    <label>MSO Notes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>