unpackaged/main/default/objects/SBQQ__QuoteLine__c/fields/of_OEC__c.field-meta.xml
<CustomField>
    <fullName>of_OEC__c</fullName>
    <formula>Monthly_Rental_Rate__c / Quoted_Cost__c</formula>
    <label>% of OEC</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>