unpackaged/main/default/objects/SBQQ__QuoteLine__c/fields/On_Hwy_Off_Road__c.field-meta.xml
<CustomField>
    <fullName>On_Hwy_Off_Road__c</fullName>
    <description>Used to determine Legal Entity and CO Automation</description>
    <label>On Hwy Off Road</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>OFF-ROAD</fullName>
            </value>
            <value>
                <fullName>ON-HWY</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>