unpackaged/main/default/objects/SBQQ__QuoteLine__c/fields/Open_Title_Requests__c.field-meta.xml
<CustomField>
    <fullName>Open_Title_Requests__c</fullName>
    <label>Open Title Requests</label>
    <summaryFilterItems>
        <field>Title__c.Status__c</field>
        <operation>equals</operation>
        <value>New, In Process, On Hold</value>
    </summaryFilterItems>
    <summaryForeignKey>Title__c.Quote_Line__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>