unpackaged/main/default/objects/SBQQ__QuoteLine__c/fields/Options_Total__c.field-meta.xml
<CustomField>
    <fullName>Options_Total__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Options Total</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>