unpackaged/main/default/objects/SBQQ__QuoteLine__c/fields/Order_Unit_Notes__c.field-meta.xml
<CustomField>
    <fullName>Order_Unit_Notes__c</fullName>
    <label>Order/Unit Notes</label>
    <length>55000</length>
    <type>LongTextArea</type>
</CustomField>