unpackaged/main/default/objects/SBQQ__QuoteLine__c/fields/Outside_Sales_User__c.field-meta.xml
<CustomField>
    <fullName>Outside_Sales_User__c</fullName>
    <formula>$Profile.Name = 'UOS Outside Sales Team'</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Outside Sales User</label>
    <type>Checkbox</type>
</CustomField>