unpackaged/main/default/objects/SBQQ__QuoteLine__c/fields/Package_Total_without_Warranty__c.field-meta.xml
<CustomField>
    <fullName>Package_Total_without_Warranty__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Package Total without Warranty</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>