unpackaged/main/default/objects/SBQQ__QuoteLine__c/fields/Paid_In_Full__c.field-meta.xml
<CustomField>
    <fullName>Paid_In_Full__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Used for Unit Status Automation to Paid value</description>
    <label>Paid In Full</label>
    <type>Checkbox</type>
</CustomField>