unpackaged/main/default/objects/SBQQ__QuoteLine__c/fields/PE__c.field-meta.xml
<CustomField>
    <fullName>PE__c</fullName>
    <formula>SBQQ__PriceEditable__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>PE</label>
    <type>Checkbox</type>
</CustomField>