unpackaged/main/default/objects/SBQQ__QuoteLine__c/fields/Pickup_Business__c.field-meta.xml
<CustomField>
    <fullName>Pickup_Business__c</fullName>
    <label>Branch Pickup Location</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Alvarado</fullName>
            </value>
            <value>
                <fullName>Atlanta</fullName>
            </value>
            <value>
                <fullName>Bakersfield</fullName>
            </value>
            <value>
                <fullName>Bluffton</fullName>
            </value>
            <value>
                <fullName>Cabot</fullName>
            </value>
            <value>
                <fullName>Calgary</fullName>
            </value>
            <value>
                <fullName>Canton</fullName>
            </value>
            <value>
                <fullName>Chicago</fullName>
            </value>
            <value>
                <fullName>Cinnaminson</fullName>
            </value>
            <value>
                <fullName>CTOS Fort Worth (Rail)</fullName>
                <isActive>false</isActive>
                <label>CTOS Fort Worth (Rail)</label>
            </value>
            <value>
                <fullName>Denver</fullName>
            </value>
            <value>
                <fullName>Elk Point</fullName>
            </value>
            <value>
                <fullName>El Monte</fullName>
            </value>
            <value>
                <fullName>Fargo</fullName>
            </value>
            <value>
                <fullName>Fontana</fullName>
            </value>
            <value>
                <fullName>Fort Worth</fullName>
            </value>
            <value>
                <fullName>Ft Wayne</fullName>
            </value>
            <value>
                <fullName>Hooksett</fullName>
            </value>
            <value>
                <fullName>Houston</fullName>
            </value>
            <value>
                <fullName>Jackson</fullName>
            </value>
            <value>
                <fullName>Kansas City</fullName>
            </value>
            <value>
                <fullName>LKS</fullName>
                <isActive>false</isActive>
                <label>Load King Elk Point</label>
            </value>
            <value>
                <fullName>Lynchburg</fullName>
            </value>
            <value>
                <fullName>Midland</fullName>
            </value>
            <value>
                <fullName>Nashua</fullName>
            </value>
            <value>
                <fullName>New Haven</fullName>
            </value>
            <value>
                <fullName>Oklahoma City</fullName>
            </value>
            <value>
                <fullName>Ontario</fullName>
            </value>
            <value>
                <fullName>Poulsbo</fullName>
            </value>
            <value>
                <fullName>Sedalia</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>