unpackaged/main/default/objects/SBQQ__QuoteLine__c/fields/Pickup_Contact_Phone__c.field-meta.xml
<CustomField>
    <fullName>Pickup_Contact_Phone__c</fullName>
    <label>Branch Contact and Phone</label>
    <length>255</length>
    <type>Text</type>
</CustomField>