unpackaged/main/default/objects/SBQQ__QuoteLine__c/fields/Pickup_Requested_By__c.field-meta.xml
<CustomField>
    <fullName>Pickup_Requested_By__c</fullName>
    <label>Requested By</label>
    <length>100</length>
    <type>Text</type>
</CustomField>