unpackaged/main/default/objects/SBQQ__QuoteLine__c/fields/Pickup_Street_Address__c.field-meta.xml
<CustomField>
    <fullName>Pickup_Street_Address__c</fullName>
    <label>Branch Address</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Pickup_Business__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>10808 WEAVER AVENUE S, EL MONTE, CA 91733</fullName>
            </value>
            <value>
                <fullName>1092 BLACKWATER RD, FOREST, VA 24551</fullName>
            </value>
            <value>
                <fullName>11139 W BECHER STREET, WEST ALLIS, WI, 53227</fullName>
            </value>
            <value>
                <fullName>12519 W INTERSTATE 20, ODESSA, TX 79766</fullName>
            </value>
            <value>
                <fullName>12580 E LYNCHBURG SALEM TURNPIKE, FOREST, VA 24551</fullName>
            </value>
            <value>
                <fullName>12660 E LYNCHBURG SALEM TURNPIKE, FOREST, VA 24551</fullName>
            </value>
            <value>
                <fullName>1400 E HIGHWAY 67, ALVARADO, TX, 76009</fullName>
            </value>
            <value>
                <fullName>14670 RANDALL AVENUE, FONTANA, CA 92335</fullName>
            </value>
            <value>
                <fullName>1700 LEIDER DRIVE, UNION GROVE, WI 53182</fullName>
            </value>
            <value>
                <fullName>17 TANGUAY AVE, NASHUA, NH, 03063</fullName>
            </value>
            <value>
                <fullName>1850 UNION LANDING ROAD, CINNAMINSON, NJ 08077</fullName>
            </value>
            <value>
                <fullName>18725 MCKAY DRIVE, HUMBLE, TX 77338</fullName>
            </value>
            <value>
                <fullName>2331 S BAKER AVE, ONTARIO, CA, 91761</fullName>
            </value>
            <value>
                <fullName>2370 ENGLISH STREET, ST PAUL, MN, 55109</fullName>
            </value>
            <value>
                <fullName>2770 5TH AVE S, FARGO, ND, 58103</fullName>
            </value>
            <value>
                <fullName>28767 HOLIDAY PLACE, ELKHART, IN 46517</fullName>
                <isActive>false</isActive>
                <label>28767 HOLIDAY PLACE, ELKHART, IN 46517</label>
            </value>
            <value>
                <fullName>300 JOHNSON STREET, WILKES-BARRE, PA, 18702</fullName>
            </value>
            <value>
                <fullName>3112 E STATE ROAD 124, BLUFFTON, IN, 46714</fullName>
            </value>
            <value>
                <fullName>3205 DAVINION RD, EL RENO, OK, 73036-1431</fullName>
            </value>
            <value>
                <fullName>3522 MIDDLEBRANCH AVENUE NE, CANTON, OH 44705</fullName>
            </value>
            <value>
                <fullName>4045 HIGHWAY FIVE, CABOT, AR 72023</fullName>
            </value>
            <value>
                <fullName>4334 SNAPFINGER WOODS DRIVE, DECATUR, GA 30035</fullName>
            </value>
            <value>
                <fullName>4500 STATE ROAD, BAKERSFIELD, CA 93308</fullName>
            </value>
            <value>
                <fullName>4729 CAPITAL CIRCLE NW, TALLAHASSEE, FL, 32303</fullName>
            </value>
            <value>
                <fullName>5105 PELHAM DRIVE, SEDALIA, MO 65301</fullName>
            </value>
            <value>
                <fullName>5455 E 52ND AVENUE, COMMERCE CITY, CO 80022</fullName>
            </value>
            <value>
                <fullName>5734 NORTHEAST MINDER RD, POUSBO, WA, 98370</fullName>
            </value>
            <value>
                <fullName>655 E 20TH ST, YUMA, AZ, 85365</fullName>
            </value>
            <value>
                <fullName>6708 TOWNLINE ROAD, SYRACUSE, NY 13211</fullName>
            </value>
            <value>
                <fullName>6714 POINTE IVERNESS WAY, FORT WAYNE, IN, 46804</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>