unpackaged/main/default/objects/SBQQ__QuoteLine__c/fields/Planned_Finish_Date__c.field-meta.xml
<CustomField>
    <fullName>Planned_Finish_Date__c</fullName>
    <description>Allocated Finish date from Slot</description>
    <label>Planned Finish Date</label>
    <type>Date</type>
</CustomField>