unpackaged/main/default/objects/SBQQ__QuoteLine__c/fields/Planned_Slot_Order__c.field-meta.xml
<CustomField>
    <fullName>Planned_Slot_Order__c</fullName>
    <description>Allocated Slot Order Number</description>
    <label>Planned Slot Order</label>
    <type>TextArea</type>
</CustomField>