unpackaged/main/default/objects/SBQQ__QuoteLine__c/fields/PO__c.field-meta.xml
<CustomField>
    <fullName>PO__c</fullName>
    <label>PO</label>
    <length>100</length>
    <type>Text</type>
</CustomField>