unpackaged/main/default/objects/SBQQ__QuoteLine__c/fields/PO_Supplier_Name__c.field-meta.xml
<CustomField>
    <fullName>PO_Supplier_Name__c</fullName>
    <description>Data comes from Freight App via API</description>
    <label>PO Supplier Name</label>
    <length>75</length>
    <type>Text</type>
</CustomField>