unpackaged/main/default/objects/SBQQ__QuoteLine__c/fields/Previous_Discount__c.field-meta.xml
<CustomField>
    <fullName>Previous_Discount__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Previous Discount</label>
    <precision>8</precision>
    <scale>3</scale>
    <type>Percent</type>
</CustomField>