unpackaged/main/default/objects/SBQQ__QuoteLine__c/fields/Price_Increase__c.field-meta.xml
<CustomField>
    <fullName>Price_Increase__c</fullName>
    <label>Price Increase</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>