unpackaged/main/default/objects/SBQQ__QuoteLine__c/fields/Product_Details__c.field-meta.xml
<CustomField>
    <fullName>Product_Details__c</fullName>
    <formula>HYPERLINK("/" &amp; SBQQ__Product__c ,"Click to view Product Details")</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Product Details</label>
    <type>Text</type>
</CustomField>