unpackaged/main/default/objects/SBQQ__QuoteLine__c/fields/Product_Make__c.field-meta.xml
<CustomField>
    <fullName>Product_Make__c</fullName>
    <label>Make</label>
    <length>50</length>
    <type>Text</type>
</CustomField>