unpackaged/main/default/objects/SBQQ__QuoteLine__c/fields/Product_Model__c.field-meta.xml
<CustomField>
    <fullName>Product_Model__c</fullName>
    <label>Model</label>
    <length>50</length>
    <type>Text</type>
</CustomField>