unpackaged/main/default/objects/SBQQ__QuoteLine__c/fields/ProductType__c.field-meta.xml
<CustomField>
    <fullName>ProductType__c</fullName>
    <formula>TEXT(SBQQ__Product__r.Product_Type__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>ProductType</label>
    <type>Text</type>
</CustomField>