unpackaged/main/default/objects/SBQQ__QuoteLine__c/fields/ProductTypeforOptions__c.field-meta.xml
<CustomField>
    <fullName>ProductTypeforOptions__c</fullName>
    <formula>IF(ProductType__c = "Option","Option",
IF(ProductType__c = "Tax","Option",
IF(ProductType__c  = "Warranty","Option",
"NotOption"
)))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>ProductTypeforOptions</label>
    <type>Text</type>
</CustomField>