unpackaged/main/default/objects/SBQQ__QuoteLine__c/fields/Proj_Build_Fin_Date__c.field-meta.xml
<CustomField>
    <fullName>Proj_Build_Fin_Date__c</fullName>
    <label>M3 Projected Finish Date</label>
    <type>Date</type>
</CustomField>