unpackaged/main/default/objects/SBQQ__QuoteLine__c/fields/QuantityFormula__c.field-meta.xml
<CustomField>
    <fullName>QuantityFormula__c</fullName>
    <formula>SBQQ__Quantity__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Quantity</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>