unpackaged/main/default/objects/SBQQ__QuoteLine__c/fields/Quote_Accepted_Date__c.field-meta.xml
<CustomField>
    <fullName>Quote_Accepted_Date__c</fullName>
    <formula>SBQQ__Quote__r.Quote_Accepted_Date__c</formula>
    <label>Quote Accepted Date</label>
    <type>Date</type>
</CustomField>