unpackaged/main/default/objects/SBQQ__QuoteLine__c/fields/Quote_Line_Number__c.field-meta.xml
<CustomField>
    <fullName>Quote_Line_Number__c</fullName>
    <formula>IF(ISBLANK(SBQQ__ProductOption__c), Name, '')</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Quote Line Number</label>
    <type>Text</type>
</CustomField>