unpackaged/main/default/objects/SBQQ__QuoteLine__c/fields/Quote_M3_Coordinator__c.field-meta.xml
<CustomField>
    <fullName>Quote_M3_Coordinator__c</fullName>
    <formula>IF( ISBLANK( SBQQ__Quote__r.M3_Coordinator__c) , "", SBQQ__Quote__r.M3_Coordinator__r.FirstName &amp; " " &amp; SBQQ__Quote__r.M3_Coordinator__r.LastName)</formula>
    <label>Quote M3 Coordinator</label>
    <type>Text</type>
</CustomField>