unpackaged/main/default/objects/SBQQ__QuoteLine__c/fields/Quote_Sales_Rep__c.field-meta.xml
<CustomField>
    <fullName>Quote_Sales_Rep__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Quote Sales Rep</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Quote_Lines1</relationshipName>
    <type>Lookup</type>
</CustomField>