unpackaged/main/default/objects/SBQQ__QuoteLine__c/fields/Quoted_Cost__c.field-meta.xml
<CustomField>
    <fullName>Quoted_Cost__c</fullName>
    <label>Quoted Cost</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>