unpackaged/main/default/objects/SBQQ__QuoteLine__c/fields/QuoteLine_Presented__c.field-meta.xml
<CustomField>
    <fullName>QuoteLine_Presented__c</fullName>
    <defaultValue>false</defaultValue>
    <label>QuoteLine_Presented</label>
    <type>Checkbox</type>
</CustomField>