unpackaged/main/default/objects/SBQQ__QuoteLine__c/fields/RBO_in_Process__c.field-meta.xml
<CustomField>
    <fullName>RBO_in_Process__c</fullName>
    <defaultValue>false</defaultValue>
    <label>RBO in Process</label>
    <type>Checkbox</type>
</CustomField>