unpackaged/main/default/objects/SBQQ__QuoteLine__c/fields/Ready_to_Ship__c.field-meta.xml
<CustomField>
    <fullName>Ready_to_Ship__c</fullName>
    <label>Ready to Ship</label>
    <type>Date</type>
</CustomField>