unpackaged/main/default/objects/SBQQ__QuoteLine__c/fields/Region__c.field-meta.xml
<CustomField>
    <fullName>Region__c</fullName>
    <description>Sales Rep Region</description>
    <formula>TEXT(SBQQ__Quote__r.SBQQ__SalesRep__r.Region__c)</formula>
    <label>Region</label>
    <type>Text</type>
</CustomField>