unpackaged/main/default/objects/SBQQ__QuoteLine__c/fields/Rejected__c.field-meta.xml
<CustomField>
    <fullName>Rejected__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Rejected</label>
    <type>Checkbox</type>
</CustomField>