unpackaged/main/default/objects/SBQQ__QuoteLine__c/fields/Remainder_This_Quarter__c.field-meta.xml
<CustomField>
    <fullName>Remainder_This_Quarter__c</fullName>
    <label>Remainder This Quarter</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>