unpackaged/main/default/objects/SBQQ__QuoteLine__c/fields/Revenue_Date__c.field-meta.xml
<CustomField>
    <fullName>Revenue_Date__c</fullName>
    <label>Revenue Date</label>
    <type>Date</type>
</CustomField>