unpackaged/main/default/objects/SBQQ__QuoteLine__c/fields/Sales_Rep_s_Manager__c.field-meta.xml
<CustomField>
    <fullName>Sales_Rep_s_Manager__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Sales Rep's Manager</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Quote_Lines</relationshipName>
    <type>Lookup</type>
</CustomField>